Iniciando a collection view.

--- a/HooliService2/Base.lproj/Main.storyboard
+++ b/HooliService2/Base.lproj/Main.storyboard
@@ -108,35 +108,44 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tBf-YR-DM8">
-                                <rect key="frame" x="20" y="403" width="67" height="30"/>
+                                <rect key="frame" x="154" y="406" width="67" height="30"/>
                                 <state key="normal" title="Categoria"/>
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="OGw-lq-VCM">
                                 <rect key="frame" x="20" y="80" width="335" height="128"/>
                                 <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BM4-ke-feY">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="69" height="59"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Kug-Ga-TN9">
-                                        <rect key="frame" x="0.0" y="64" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="64" width="69" height="59"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="69" height="59"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZDN-7s-glW">
+                                                    <rect key="frame" x="0.0" y="0.0" width="69" height="59"/>
+                                                </imageView>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="da0-hT-PcZ" id="G01-r8-rk1"/>
+                                    <outlet property="delegate" destination="da0-hT-PcZ" id="aAw-91-FBz"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Inserir Anúncio" id="xaf-im-zmU">
-                        <barButtonItem key="rightBarButtonItem" title="Salvar" id="282-3c-B3T">
+                        <barButtonItem key="rightBarButtonItem" title="Publicar" id="282-3c-B3T">
                             <connections>
                                 <action selector="btSalvar:" destination="da0-hT-PcZ" id="67d-6p-tfQ"/>
                             </connections>
@@ -144,6 +153,8 @@
                     </navigationItem>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="imagem" destination="ZDN-7s-glW" id="iDi-Kv-Igg"/>
+                        <outlet property="minhaCollectionView" destination="OGw-lq-VCM" id="d6A-e6-cqv"/>
                         <outlet property="tfDescricao" destination="d3T-Bv-4jy" id="Mtj-J1-FMI"/>
                         <outlet property="tfTitulo" destination="qIe-mv-MtO" id="BAr-xj-eMG"/>
                     </connections>
