--- a/HooliService2/Base.lproj/Main.storyboard
+++ b/HooliService2/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7JE-vf-GNY" id="B5d-6a-q0s">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="60"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="59.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wFO-xj-W6V">
@@ -112,8 +112,8 @@
                                 <state key="normal" title="Categoria"/>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFi-BD-7Yu">
-                                <rect key="frame" x="155" y="444" width="65" height="30"/>
-                                <state key="normal" title="Adicionar"/>
+                                <rect key="frame" x="126" y="444" width="123" height="30"/>
+                                <state key="normal" title="Adicionar imagem"/>
                                 <connections>
                                     <action selector="btAdicionarFoto:" destination="da0-hT-PcZ" eventType="touchUpInside" id="ozW-Rx-maO"/>
                                 </connections>
@@ -129,7 +129,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Cell" id="Kug-Ga-TN9" customClass="HSNovoServicoCollectionViewCell" customModule="HooliService2" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="64" width="69" height="59"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="69" height="59"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="69" height="59"/>
